# claudine

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  tarpaulin.toml
.cargo/: audit.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml  site-check.yml
.superpowers/sdd/: progress.md
Formula/: claudine.rb
crates/claudine/: Cargo.toml
crates/claudine-core/: Cargo.toml
crates/claudine-core/src/: cli.rs  config.rs  error.rs  export.rs  extensions.rs  home.rs  housekeeping.rs  import.rs  lib.rs  manifest.rs  marketplaces.rs  model.rs  pathcodec.rs  remap.rs  scan.rs  search.rs  selfupdate.rs  settings.rs  usage.rs
crates/claudine-core/src/commands/: export.rs  homes.rs  import.rs  mod.rs  update.rs
crates/claudine-core/src/tui/: app.rs  hooks_editor.rs  marketplaces.rs  mcp_editor.rs  mod.rs  settings_form.rs  ui.rs
crates/claudine/src/: cli.rs  main.rs
crates/claudine/src/tui/: app.rs  hooks_editor.rs  marketplaces.rs  mcp_editor.rs  mod.rs  settings_form.rs  ui.rs
crates/claudine/tests/: cli.rs
docs/superpowers/plans/: 2026-06-20-claudine-phase1-migration.md  2026-06-23-claudine-phase2a-edition-hooks-plugins.md  2026-06-23-claudine-phase2b-edition-mcp.md  2026-06-23-claudine-phase2c1-marketplaces.md  2026-06-23-claudine-phase2c2a-catalogue.md  2026-06-23-claudine-phase2c2b-installation.md  2026-07-13-claudine-template-alignment.md
docs/superpowers/specs/: 2026-06-20-claudine-tui-design.md  2026-06-23-claudine-phase2a-edition-hooks-plugins-design.md  2026-06-23-claudine-phase2b-edition-mcp-design.md  2026-06-23-claudine-phase2c1-marketplaces-design.md  2026-06-23-claudine-phase2c2a-catalogue-design.md  2026-06-23-claudine-phase2c2b-installation-design.md  2026-07-13-claudine-template-alignment-design.md
packaging/arch/: PKGBUILD
packaging/aur/: PKGBUILD
packaging/homebrew/: claudine.rb
packaging/winget/: README.md
site/: config.toml
site/content/: _index.fr.md  _index.md
site/sass/: main.scss
site/templates/: base.html  index.html
