[workspace]
resolver = "2"
members = ["crates/claudine-core", "crates/claudine"]

[workspace.package]
edition = "2021"
rust-version = "1.74"
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "Outil Rust TUI/CLI pour naviguer et gérer les données locales de Claude Code (~/.claude)."
repository = "https://github.com/systm-d/claudine"
homepage = "https://github.com/systm-d/claudine"
authors = ["systm-d"]
