[package]
name = "claudine-core"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "1"
tar = "0.4"
flate2 = "1"

[dev-dependencies]
tempfile = "3"
