[package]
name = "claudine-core"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tar.workspace = true
flate2.workspace = true
ratatui.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
