[package]
name = "claudine"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "claudine"
path = "src/main.rs"

[dependencies]
claudine-core = { path = "../claudine-core" }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
